TPHeritage/err.out
In file included from /usr/include/c++/4.8/unordered_map:41:0,
                 from /home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Dessin.h:14,
                 from /home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Dessin.cpp:20:
/usr/include/c++/4.8/tuple: In instantiation of ‘std::pair<_T1, _T2>::pair(std::tuple<_Args1 ...>&, std::tuple<_Args2 ...>&, std::_Index_tuple<_Indexes1 ...>, std::_Index_tuple<_Indexes2 ...>) [with _Args1 = {const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&}; long unsigned int ..._Indexes1 = {0ul}; _Args2 = {}; long unsigned int ..._Indexes2 = {}; _T1 = const std::basic_string<char>; _T2 = Objet]’:
/usr/include/c++/4.8/tuple:1079:63:   required from ‘std::pair<_T1, _T2>::pair(std::piecewise_construct_t, std::tuple<_Args1 ...>, std::tuple<_Args2 ...>) [with _Args1 = {const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&}; _Args2 = {}; _T1 = const std::basic_string<char>; _T2 = Objet]’
/usr/include/c++/4.8/bits/hashtable_policy.h:177:55:   required from ‘std::__detail::_Hash_node<_Value, true>::_Hash_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&>, std::tuple<>}; _Value = std::pair<const std::basic_string<char>, Objet>]’
/usr/include/c++/4.8/ext/new_allocator.h:120:4:   required from ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::__detail::_Hash_node<std::pair<const std::basic_string<char>, Objet>, true>; _Args = {const std::piecewise_construct_t&, std::tuple<const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&>, std::tuple<>}; _Tp = std::__detail::_Hash_node<std::pair<const std::basic_string<char>, Objet>, true>]’
/usr/include/c++/4.8/bits/hashtable.h:727:6:   required from ‘std::_Hashtable<_Key, _Value, _Alloc, _ExtractKey, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits>::__node_type* std::_Hashtable<_Key, _Value, _Alloc, _ExtractKey, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits>::_M_allocate_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&>, std::tuple<>}; _Key = std::basic_string<char>; _Value = std::pair<const std::basic_string<char>, Objet>; _Alloc = std::allocator<std::pair<const std::basic_string<char>, Objet> >; _ExtractKey = std::__detail::_Select1st; _Equal = std::equal_to<std::basic_string<char> >; _H1 = std::hash<std::basic_string<char> >; _H2 = std::__detail::_Mod_range_hashing; _Hash = std::__detail::_Default_ranged_hash; _RehashPolicy = std::__detail::_Prime_rehash_policy; _Traits = std::__detail::_Hashtable_traits<true, false, true>; std::_Hashtable<_Key, _Value, _Alloc, _ExtractKey, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits>::__node_type = std::__detail::_Hash_node<std::pair<const std::basic_string<char>, Objet>, true>]’
/usr/include/c++/4.8/bits/hashtable_policy.h:493:8:   required from ‘std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::mapped_type& std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::operator[](const key_type&) [with _Key = std::basic_string<char>; _Pair = std::pair<const std::basic_string<char>, Objet>; _Alloc = std::allocator<std::pair<const std::basic_string<char>, Objet> >; _Equal = std::equal_to<std::basic_string<char> >; _H1 = std::hash<std::basic_string<char> >; _H2 = std::__detail::_Mod_range_hashing; _Hash = std::__detail::_Default_ranged_hash; _RehashPolicy = std::__detail::_Prime_rehash_policy; _Traits = std::__detail::_Hashtable_traits<true, false, true>; std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::mapped_type = Objet; std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::key_type = std::basic_string<char>]’
/usr/include/c++/4.8/bits/unordered_map.h:596:20:   required from ‘std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type& std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::operator[](const key_type&) [with _Key = std::basic_string<char>; _Tp = Objet; _Hash = std::hash<std::basic_string<char> >; _Pred = std::equal_to<std::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, Objet> >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type = Objet; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::key_type = std::basic_string<char>]’
/home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Dessin.cpp:50:17:   required from here
/usr/include/c++/4.8/tuple:1090:70: error: no matching function for call to ‘Objet::Objet()’
         second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
                                                                      ^
/usr/include/c++/4.8/tuple:1090:70: note: candidates are:
In file included from /home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Dessin.h:16:0,
                 from /home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Dessin.cpp:20:
/home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Objet.h:76:5: note: Objet::Objet(std::string)
     Objet (std::string unNom ):nom(unNom){}
     ^
/home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Objet.h:76:5: note:   candidate expects 1 argument, 0 provided
/home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Objet.h:66:5: note: Objet::Objet(const Objet&)
     Objet ( const Objet & unObjet );
     ^
/home/element/Documents/INSA/TP/2INSA3IFTP/TPHeritage/src/Objet.h:66:5: note:   candidate expects 1 argument, 0 provided
make[2]: *** [CMakeFiles/CommandeTestHistorique.dir/src/Dessin.cpp.o] Error 1
make[1]: *** [CMakeFiles/CommandeTestHistorique.dir/all] Error 2
make: *** [all] Error 2
